# StudyFlow

./: pyproject.toml  requirements.txt
.gihub/workflow/: cicd.yml
.github/workflows/: cicd.yml
src/: main.py
src/frontend/: vite.config.js
src/frontend/src/: App.vue  router.js
src/frontend/src/components/: HelloWorld.vue
src/frontend/src/pages/: HomePage.vue
src/studyflow/: __init__.py  app.py
tests/: test_check.py
